--- a/notificationapp/src/main/res/layout/activity_notification_app.xml
+++ b/notificationapp/src/main/res/layout/activity_notification_app.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntentFilter">
+    tools:context=".NotificationApp">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -19,10 +20,18 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="onClickSendNotification"
         android:text="Button"
-        android:onClick="onClickMyButton"
-        tools:layout_editor_absoluteX="153dp"
-        tools:layout_editor_absoluteY="135dp"
-        tools:ignore="HardcodedText,MissingConstraints,OnClick" />
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText,OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
