--- a/toastapp/src/main/res/layout/activity_toast_app.xml
+++ b/toastapp/src/main/res/layout/activity_toast_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntentFilter">
+    tools:context=".ToastApp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,15 +14,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        android:onClick="onClickMyButton"
-        tools:layout_editor_absoluteX="153dp"
-        tools:layout_editor_absoluteY="135dp"
-        tools:ignore="HardcodedText,MissingConstraints,OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
